<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="online_config">OnlineConfig</string>
    <string name="make_crash">Make me crash!!</string>
    <string name="kv_event">K-V Event</string>
    <string name="normal_event">Event</string>
    <string name="event_begin">Event Begin</string>
    <string name="event_end">Event End</string>
    <string name="event_duration">Value-Type</string>
    <string name="page_stack">Page in Fragment Stack</string>
    <string name="page_tabs">Page in Fragment Tabs</string>
    <string name="social_analytics">Social Analytics</string>
    <string name="js_in_webview">JS Analytics in Webivew</string>
    <string name="flush_cache">send cache message ,right now !</string>

</resources>